--- a/ws/src/dd_controller/package.xml
+++ b/ws/src/dd_controller/package.xml
@@ -14,7 +14,9 @@
 
 	<build_depend>std_msgs</build_depend>
 	<build_depend>roscpp</build_depend>
+    <build_depend>crazyflie_demo</build_depend>
 	
 	<run_depend>std_msgs</run_depend>
 	<run_depend>roscpp</run_depend>
+    <run_depend>crazyflie_demo</run_depend>
 </package>
